added test for checking terms page

--- a/java/erise/TODO.txt
+++ b/java/erise/TODO.txt
@@ -13,3 +13,6 @@
 @TODO: Describe account page/add method to change localization
 @TODO: Describe any profile page
 @TODO: Describe model page
+
+
+@TODO: Refactoring:
